--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
 
-      - run: npm ci
+
+      - run: npm install
       - run: npm run build   # Vite → dist/, CRA → build/
 
       - uses: actions/upload-pages-artifact@v3
