--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,27 @@
 name: Deploy to GitHub Pages
-
 on:
-  push:
-    branches: [ main ]   # or your default branch
+  push: { branches: [ main ] }
   workflow_dispatch:
-
 permissions:
   contents: read
   pages: write
   id-token: write
-
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-
-
       - run: npm install
-      - run: npm run build   # Vite → dist/, CRA → build/
-
+      - run: npm run build
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: |
-            dist
-            build
-
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -41,11 +29,8 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - uses: actions/configure-pages@v5
         with:
           enablement: true
-
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - id: deployment
         uses: actions/deploy-pages@v4
