--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "distance-calculator",
   "private": true,
   "type": "module",
+  "version": "1.0.0",
   "scripts": {
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -11,13 +14,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.3.4"
-  },
-  {
-  "devDependencies": {
+    "vite": "^5.3.4",
     "tailwindcss": "^3.4.10",
     "postcss": "^8.4.41",
     "autoprefixer": "^10.4.20"
   }
 }
-
